--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,6 @@
 {
-    "name": "Tekhmos Sote",
+    "name": "tekhsite",
     "dockerFile": "Dockerfile",
-    "forwardPorts": [80]
+    "forwardPorts": [80],
+    "mounts": ["source=${localWorkspaceFolder},target=/usr/share/nginx/html,type=bind"]
 }
